Enable word wrap on logo to fix issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -56,14 +56,14 @@ div {
     max-width: 100%;
     /* height: 200px; */
     flex: 1 1 40%;
-    border-radius: 20px;
+    border-radius: 4px;
     margin-bottom: 16px;
 }
 
 .logo {
     font-size: 24px;
     font-weight: 1000;
-    white-space:nowrap;
+    /* white-space:nowrap; */
 }
 ul {
     display:flex;
